Add delete category method
