# docs/swagger.yaml
@@ -138,6 +138,33 @@ info:
   title: FinlandShop API
   version: "0.1"
 paths:
+  /categories/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: delete category by id
+      parameters:
+      - description: category id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: ""
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.ErrorResponse'
+      summary: Delete category
+      tags:
+      - categories-actions
   /categories/create:
     post:
       consumes:
